Added Config and resetting directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>TypeScript Example</title>
 </head>
 <body>
-
+  Hello!!
 </body>
-<script src="example/ch2/example.js"></script>
+  <script src="example/index.js"></script>
+<!-- <script src="example/grammar/ch2/example.js"></script> -->
+<!-- <script src="example/grammar/ch3/example.js"></script> -->
 </html>
