Added builder pattern 50% not print result on the page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>TypeScript Example</title>
+  <meta charset="UTF-8">
+  <title>TypeScript Example</title>
 </head>
+
 <body>
   Hello!!
 </body>
-  <script src="example/index.js"></script>
-<!-- <script src="example/grammar/ch2/example.js"></script> -->
-<!-- <script src="example/grammar/ch3/example.js"></script> -->
+<script src="example/main.js"></script>
+<script src="example/pattern/structural/builder/demo.js"></script>
+
 </html>
