simple decorator added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   Hello!!
 </body>
   <script src="example/index.js"></script>
-<!-- <script src="example/grammar/ch2/example.js"></script> -->
+  <script src="example/pattern/decorator/index.js"></script>
 <!-- <script src="example/grammar/ch3/example.js"></script> -->
 </html>
