Added call&Apply examples

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 
 <body>
-  Hello!!
+  Hello!! TypeScript
 </body>
-  <script src="example/index.js"></script>
-  <script src="example/pattern/decorator/index.js"></script>
-<script src="example/main.js"></script>
-<script src="example/pattern/structural/builder/demo.js"></script>
+
 </html>
