[Vue, Graphql] Updated Types and Mutations matching apollo

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>TypeScript & GraphQL</title>
+  <title>TypeScript & Vue & GraphQL</title>
 
   <link rel="icon" href="https://github.com/fluidicon.png" title="GitHub">
   <!--
