--- a/client/index.html
+++ b/client/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="UTF-8">
-  <title>TypeScript & Vue & GraphQL</title>
+  <meta charset='UTF-8'>
+  <title>Book Manager By Hun</title>
 
-  <link rel="icon" href="https://github.com/fluidicon.png" title="GitHub">
-  <!--
-  <meta name="viewport" content="width=device-width">
-  <meta property="og:url" content="https://github.com">
-  <meta property="og:site_name" content="GitHub">
-  <meta property="og:title" content="Build software better, together">
-  <meta property="og:description" content="GitHub is where people build software. More than 27 million people use GitHub to discover, fork, and contribute to over 77 million projects.">
-  <meta property="og:image" content="https://assets-cdn.github.com/images/modules/open_graph/github-logo.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="1200">
-  <meta property="og:image" content="https://assets-cdn.github.com/images/modules/open_graph/github-mark.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="620">
-  <meta property="og:image" content="https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="620"> -->
+  <!-- <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' /> -->
+  <meta name='viewport' content='width=device-width'>
+  <meta property='og:url' content='https://seolhun.github.io'>
+  <meta property='og:site_name' content='BookManagemerBySeolhun'>
+  <meta property='og:title' content='BookManager'>
+  <meta property='og:description' content='Book Manager to use in company'>
+  <!-- <meta property='og:image' content='https://assets-cdn.github.com/images/modules/open_graph/github-logo.png'>
+  <meta property='og:image:type' content='image/png'>
+  <meta property='og:image:width' content='1200'>
+  <meta property='og:image:height' content='1200'>
+  <meta property='og:image' content='https://assets-cdn.github.com/images/modules/open_graph/github-mark.png'>
+  <meta property='og:image:type' content='image/png'>
+  <meta property='og:image:width' content='1200'>
+  <meta property='og:image:height' content='620'>
+  <meta property='og:image' content='https://assets-cdn.github.com/images/modules/open_graph/github-octocat.png'>
+  <meta property='og:image:type' content='image/png'>
+  <meta property='og:image:width' content='1200'>
+  <meta property='og:image:height' content='620'> -->
 </head>
 
 <body>
-  <div id="app">
+  <div id='app'>
 
   </div>
 </body>
