[Client] - Updated GraphQL Login Mutation

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset='UTF-8'>
   <title>Book Manager By Hun</title>
 
-  <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
+  <!-- <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' /> -->
   <meta name='viewport' content='width=device-width'>
   <meta property='og:url' content='https://seolhun.github.io'>
   <meta property='og:site_name' content='BookManagemerBySeolhun'>
